fiz a area de projetos

--- a/index.html
+++ b/index.html
@@ -162,11 +162,89 @@
 
             <article id="projetos">
                 <h2><i class="fa-solid fa-trowel-bricks"></i> Meus projetos</h2>
+
+                <div id="projeto-container">
+                    <div class="projeto">
+                        <img src="imagens/projeto-01-videos.jpg" alt="Projeto 1" class="foto">
+                        <div class="projeto-info">
+                            <p class="periodo">2025</p>
+                            <h3 class="titulo">Projeto de Vídeo</h3>
+                            <p>Projeto contruído para treinar a inserção de vídeos em nosso site.</p>
+                            <details class="descricao">
+                                <summary>Saiba mais...</summary>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, quidem corrupti! Nisi dicta quasi laudantium sed officia iusto ullam suscipit unde, sunt, molestiae delectus mollitia impedit pariatur eos vitae maiores.</p>
+                            </details>
+                        </div>
+                    </div>
+                    <div class="projeto">
+                        <img src="imagens/projeto-02-cordel.jpg" alt="Projeto 2" class="foto">
+                        <div class="projeto-info">
+                            <p class="periodo">2025</p>
+                            <h3 class="titulo">Projeto Cordel</h3>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias itaque.</p>
+                            <details class="descricao">
+                                <summary>Saiba mais...</summary>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, quidem corrupti! Nisi dicta quasi laudantium sed officia iusto ullam suscipit unde, sunt, molestiae delectus mollitia impedit pariatur eos vitae maiores.</p>
+                            </details>
+                        </div>
+                    </div>
+                    <div class="projeto">
+                        <img src="imagens/projeto-03-android.jpg" alt="Projeto 3" class="foto">
+                        <div class="projeto-info">
+                            <p class="periodo">2024</p>
+                            <h3 class="titulo">Projeto Android</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto veniam qui similique alias nihil a deserunt officiis inventore voluptates perspiciatis. Expedita quae eveniet doloremque, aspernatur delectus quas quos enim rerum.</p>
+                            <details class="descricao">
+                                <summary>Saiba mais...</summary>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, quidem corrupti! Nisi dicta quasi laudantium sed officia iusto ullam suscipit unde, sunt, molestiae delectus mollitia impedit pariatur eos vitae maiores.</p>
+                            </details>
+                        </div>
+                    </div>
+                    <div class="projeto">
+                        <img src="imagens/projeto-04-links.jpg" alt="Projeto 4" class="foto">
+                        <div class="projeto-info">
+                            <p class="periodo">2023</p>
+                            <h3 class="titulo">Projeto de Âncora</h3>
+                            <p>Projeto contruído para treinar a inserção de links em nosso site.</p>
+                            <details class="descricao">
+                                <summary>Saiba mais...</summary>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, quidem corrupti! Nisi dicta quasi laudantium sed officia iusto ullam suscipit unde, sunt, molestiae delectus mollitia impedit pariatur eos vitae maiores.</p>
+                            </details>
+                        </div>
+                    </div>
+                    <div class="projeto">
+                        <img src="imagens/projeto-05-login.jpg" alt="Projeto 5" class="foto">
+                        <div class="projeto-info">
+                            <p class="periodo">2025</p>
+                            <h3 class="titulo">Projeto de Login</h3>
+                            <p>usamus, praesentium deserunt.</p>
+                            <details class="descricao">
+                                <summary>Saiba mais...</summary>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, quidem corrupti! Nisi dicta quasi laudantium sed officia iusto ullam suscipit unde, sunt, molestiae delectus mollitia impedit pariatur eos vitae maiores.</p>
+                            </details>
+                        </div>
+                    </div>
+                    <div class="projeto">
+                        <img src="imagens/projeto-06-album.jpg" alt="Projeto 6" class="foto">
+                        <div class="projeto-info">
+                            <p class="periodo">2026</p>
+                            <h3 class="titulo">Projeto de Fotos flexíveis</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, ea? Animi, doloremque. Itaque totam voluptates ad ratione iure minus eius cum, voluptatem beatae? Voluptatum dicta, accusantium sunt magni consequuntur quia!</p>
+                            <details class="descricao">
+                                <summary>Saiba mais...</summary>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, quidem corrupti! Nisi dicta quasi laudantium sed officia iusto ullam suscipit unde, sunt, molestiae delectus mollitia impedit pariatur eos vitae maiores.</p>
+                            </details>
+                        </div>
+                    </div>
+                </div>
+
             </article> <!-- Fim article#projetos-->
         </section>
     </main>
 
-    <footer></footer>
+    <footer>
+        Portifólio desenvolvido por <a href="#" target="_blank">Curso em Vídeo</a> em 2026
+    </footer>
 
     <script src="scripts/script.js"></script>
 </body>
