--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <li><a href="#skills" class="link"><i class="fa-solid fa-brain"></i></a></li>
                 <li><a href="#formacao" class="link"><i class="fa-solid fa-graduation-cap"></i></a></li>
                 <li><a href="#projetos" class="link"><i class="fa-solid fa-trowel-bricks"></i></a></li>
-                <li><a href="#" id="botao-tema"><i class="fa-solid fa-moon"></i></a></li>
+                <li><a href="#" id="botao-tema" class="link"><i class="fa-solid fa-moon"></i></a></li>
             </ul>
         </nav>
     </header>
@@ -25,7 +25,7 @@
         <section id="ficha">
             <img src="imagens/guanabara-perfil.jpg" alt="Gustavo Guanabara" class="foto">
             <h1>Gustavo Guanabara</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam perspiciatis tempora ducimus aliquid accusamus soluta quisquam officia mollitia voluptates hic. Repudiandae esse non repellat optio ad, excepturi quas. Consequatur, minus. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati accusantium fugit eius quidem ad porro reiciendis dignissimos quisquam, blanditiis iste eveniet ea. Dolores at rem consequuntur sint saepe in numquam.</p>
+            <p>orem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati accusantium fugit eius quidem ad porro reiciendis dignissimos quisquam, blanditiis iste eveniet ea. Dolores at rem consequuntur sint saepe in numquam.</p>
             <div id="social">
                 <a href="https://www.linkedin.com/in/guanabara/" target="_blank" rel="nofollow"><i class="fa-brands fa-linkedin-in"></i></a>
                 <a href="https://github.com/gustavoguanabara" target="_blank" rel="nofollow"><i class="fa-brands fa-github"></i></a>
